# up-client-vsomeip-rust

./: Cargo.toml  README.md
.github/workflows/: bundled-lint-and-test.yaml  lint-and-test.yaml  (+1 more)
examples/: client.rs  point_to_point.rs  publisher.rs  service.rs  subscriber.rs
src/: determinations.rs  lib.rs  listener_registry.rs  message_conversions.rs  rpc_correlation.rs  transport.rs  vsomeip_config.rs
tests/: client_service.rs  point_to_point.rs  publisher_subscriber.rs  register_unregister.rs  test_lib.rs  upclient_vsomeip.rs
up-transport-vsomeip/: Cargo.toml
up-transport-vsomeip/examples/: hello_client.rs  hello_service.rs
up-transport-vsomeip/src/: determine_message_type.rs  extern_fn_registry.rs  lib.rs  listener_registry.rs  message_conversions.rs  registry.rs  rpc_correlation.rs  storage.rs  transport.rs  transport_engine.rs  transport_inner.rs  utils.rs  vsomeip_config.rs  vsomeip_offered_requested.rs
up-transport-vsomeip/src/storage/: application_registry.rs  application_state_availability_handler_registry.rs  application_state_handler_registry.rs  listener_registry.rs  message_handler_registry.rs  rpc_correlation.rs  vsomeip_offered_requested.rs
up-transport-vsomeip/src/transport_inner/: transport_inner_engine.rs  transport_inner_handle.rs
up-transport-vsomeip/tests/: client_service.rs  point_to_point.rs  publisher_subscriber.rs  register_unregister.rs  test_lib.rs
up-transport-vsomeip/vsomeip_configs/: client.json  point_to_point_integ.json  service.json
vsomeip-proc-macro/: Cargo.toml
vsomeip-sys/: Cargo.toml  README.md  build.rs
vsomeip_configs/: client.json  example_ustreamer.json
(+16 files in other folders)
